Bug ZK-2648: Icons are not centered vertically inside paging control

--- a/src/main/resources/web/atlantic/js/zul/mesh/less/paging.less
+++ b/src/main/resources/web/atlantic/js/zul/mesh/less/paging.less
@@ -75,6 +75,7 @@
 	}
 	.z-paging-icon {
 		.iconFontStyle(@fontSizeXLarge, @pagingIconColor);
+		line-height: @baseLineHeight;
 	}
 	&-selected,
 	&-selected:hover,
